# analysis-toolkit

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  YAML Help.md  adv-searchfor.py  audit-linux-packages.sh  audit-linux-users.sh  audit-windows-version.sh  clean-pycache.ps1  file-width.sh  fortigate-ipsec-phase1.sh  fortigate-ipsec-phase2.sh  functions.inc.sh  mkdocs.yml  mypy.ini  nipper-expander.py  pyproject.toml  requirements.txt  rtf-to-text.sh  searchfor.sh  test_container_type.py  test_di_integration.py  test_integration.py  test_search_config.py  test_unboundlocalerror_fix.py  update_cli_fixtures.py  update_cli_tests.ps1
.github/: PYPI_SETUP.md  README.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: publish.yml  quick-test.yml  test.yml
conf.d/: 01-audit-windows-system.yaml  02-audit-windows-network.yaml  audit-all.yaml  audit-linux-logging.yaml  audit-linux-network.yaml  audit-linux-sec-tools.yaml  audit-linux-services.yaml  audit-linux-ssh.yaml  audit-linux-system.yaml  audit-linux-users.yaml  audit-linux-worldfiles.yaml  audit-linux.yaml  audit-macos-logging.yaml  audit-macos-network.yaml  audit-macos-system.yaml  audit-macos-users.yaml  audit-windows-logging.yaml  audit-windows-network.yaml  audit-windows-security-software.yaml  audit-windows-system.yaml  audit-windows-users.yaml  audit-windows.yaml  sample-config.yaml  sample-windows_update_history.yaml
docs/: README.md  index.md
docs/api/: README.md
docs/architecture/: README.md  data-architecture.md  security-boundaries.md  service-package-pattern.md  system-overview.md  ui-service-layer-separation.md
docs/architecture/.github/: copilot-instructions  doc-template.md
docs/architecture/cli/: README.md  cli-architecture-patterns.md  cli-decorator-patterns.md  cli-help-system.md  cli-option-groups.md
docs/architecture/concurrency/: README.md  interrupt-handling.md  parallel-processing-architecture.md  task-batching-patterns.md  thread-vs-process-pool-strategy.md
docs/architecture/data-flows/: README.md  data-flows-architecture.md  nipper-expander.md  process-scripts.md  rtf-to-text.md
docs/architecture/data-models/: README.md  application-data-structures.md  data-models-architecture.md  process-scripts-data-models.md  program-configuration.md  yaml-search-configuration.md
docs/architecture/dependency-injection/: README.md  core-services.md  di-command-pattern.md  di-service-type.md  service-extension-pattern.md
docs/architecture/error-handling/: README.md
docs/architecture/performance/: README.md  content-streaming-migration.md  content-streaming.md
docs/architecture/testing/: di-testing-patterns.md  (+3 more)
docs/development/: README.md  cli-shared-options-analysis.md  cli-testing-standards.md  documentation-guidelines.md  file-discovery-function-analysis.md  github-actions-console-width-fix.md  github-actions-pipeline-analysis.md  gradual-mypy-workflow.md  mypy-action-plan.md  shared-utilities-opportunities.md  test-directory-organization.md  testing-standards.md  type-hints-requirements.md
docs/implementation/: README.md  backward-compatibility-di-migration.md  batch_processing_simplification.md  cli-output-formatting-analysis.md  cli-refactoring-recommendations.md  cli.md  dependency-injection-implementation-plan.md  dependency-injection-implementation-summary.md  di-command-migration-guide.md  di-nipper-migration.md  excel-export-dependency-injection-migration-plan.md  excel-utils-di-migration-plan.md  file-processing-dependency-injection-migration-plan.md  interrupt-handling-enhancement.md  parallel-engine-refactor.md  progress-bar-improvements.md  pytest-fixture-organization-migration-plan.md  rich-output-singleton-review.md  rich-output-thread-safety.md
docs/reference/: README.md
docs/troubleshooting/: README.md  common-issues.md  installation-issues.md
docs/tutorials/: README.md
docs/user-guides/: README.md  YAML Help.md  installation.md  nipper-expander.md  process-scripts.md  rtf-to-text.md  updating.md
kpat/: __init__.py  common.py  console.py  import_tools.py
mypy-report/: index.html
scripts/: benchmark-kpat-performance.ps1  test_container_type.py  tests-migrate-integration-tests.ps1  tests-migrate-regex-unit-tests.ps1  tests-migrate-unit-tests.ps1  type-check.ps1
src/adv_searchfor/: __main__.py  adv_searchfor.py
src/kp_analysis_toolkit/: __main__.py  cli.py  shared_funcs.py
src/nipper/: __main__.py  nipper_expander.py
testdata/: test_good_file.txt
testdata/linux/: rhel86-kp0.6.16-1.txt  ubuntu-22.04-0.6.22.txt
testdata/nipper/: nipper-test.csv
testdata/process_scripts/: test_unknown_producer.txt
testdata/rtf/: another_test.rtf  encoding_test.rtf  test_document.rtf  test_document_converted-20250629-145759.txt
testdata/windows/: windows2022-cb20348-kp0.4.7.txt
tests/: conftest.py  test_cli_di_integration.py  test_cli_integration.py  test_help_intercept.py  test_rich_output_di_comprehensive.py  test_rich_output_di_regression.py  test_shared_funcs.py
tests/core/: __init__.py  test_containers.py
tests/e2e/: __init__.py  conftest.py  test_excel_export_workflow.py  test_file_processing_di_e2e.py
tests/fixtures/: __init__.py  mock_fixtures.py  parallel_processing_fixtures.py  parallel_processing_integration_fixtures.py  rtf_fixtures.py  system_fixtures.py
tests/integration/: conftest.py
tests/nipper_expander/: test_cli.py  test_process_nipper.py
tests/performance/: conftest.py
tests/process_scripts/: test_cli_functions.py  test_enumstrmixin.py  test_excel_exporter.py  test_parallel_engine.py  test_pathvalidationmixin.py  test_process_systems.py  test_search_engine.py  test_search_engine_core.py  test_search_multiline.py  test_should_skip_line.py  test_yaml_config_fix.py
tests/regression/: test_rich_output_comprehensive.py  test_rich_output_di_regression.py
tests/rtf_to_text/: __init__.py  test_cli.py  test_process_rtf.py
tests/utils/: __init__.py  test_excel_utils.py  test_utils_other.py  test_version_checker.py
(+419 files in other folders)
