[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kp-analysis-toolkit"
dynamic = ["version"]
authors = [
    {name="Randy Bartels", email="rjbartels@outlook.com"},
]
description = "Python utilities to parse technical information for security audits"
readme = "README.md"
keywords = ["pii discovery", "data discovery", "credit card discovery"]
requires-python = ">=3.12,<4"
dependencies = [
    "charset-normalizer>=3.4.0",
    "click>=8.1.8",
    "dependency-injector>=4.48.1",
    "openpyxl>=3.1.5",
    "packaging>=21.0",
    "pandas>=1.5.1",
    "pydantic>=2.11.5",
    "pyyaml>=6.0",
    "rich>=14.0.0",
    "rich-click>=1.8.0",
    "striprtf>=0.0.26",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
kpat_cli = "kp_analysis_toolkit.cli.main:main"
nipper_expander = "kp_analysis_toolkit.cli.main:legacy_nipper_expander"
adv-searchfor = "kp_analysis_toolkit.cli.main:legacy_adv_searchfor"

[project.urls]
Homepage = "https://github.com/kirkpatrickprice/analysis-toolkit"
Issues = "https://github.com/kirkpatrickprice/analysis-toolkit/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"kp_analysis_toolkit.process_scripts" = ["conf.d/*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "kp_analysis_toolkit.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "unit: Fast unit tests",
    "integration: Integration tests", 
    "e2e: End-to-end tests",
    "regression: Regression tests",
    "performance: Performance tests",
    "slow: Tests that take longer to run",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true