[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kp-analysis-toolkit"
dynamic = ["version"]
authors = [
    {name="Randy Bartels", email="rjbartels@outlook.com"},
]
description = "Python utilities to parse technical information for security audits"
readme = "README.md"
keywords = ["pii discovery", "data discovery", "credit card discovery"]
requires-python = ">=3.12,<4"
dependencies = [
    "charset-normalizer>=3.4.0",
    "click>=8.1.8",
    "dependency-injector>=4.48.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "openpyxl>=3.1.5",
    "packaging>=21.0",
    "pandas>=1.5.1",
    "pydantic>=2.11.5",
    "pyyaml>=6.0",
    "rich>=14.0.0",
    "rich-click>=1.8.0",
    "striprtf>=0.0.26",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
kpat_cli = "kp_analysis_toolkit.cli.main:main"
nipper_expander = "kp_analysis_toolkit.cli.main:legacy_nipper_expander"
adv-searchfor = "kp_analysis_toolkit.cli.main:legacy_adv_searchfor"

[project.urls]
Homepage = "https://github.com/kirkpatrickprice/analysis-toolkit"
Issues = "https://github.com/kirkpatrickprice/analysis-toolkit/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"kp_analysis_toolkit.process_scripts" = ["conf.d/*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "kp_analysis_toolkit.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "unit: Fast unit tests",
    "integration: Integration tests", 
    "e2e: End-to-end tests",
    "regression: Regression tests",
    "performance: Performance tests",
    "slow: Tests that take longer to run",
]

[dependency-groups]
dev = [
    "lxml>=6.0.0",
    "mypy>=1.16.1",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "types-openpyxl>=3.1.5.20250602",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.mypy]
# Baseline configuration for gradual type checking
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
plugins = ["pydantic.mypy"]

# Essential checks (always enabled)
check_untyped_defs = true
disallow_untyped_calls = false  # Too strict for gradual adoption
disallow_untyped_defs = false   # Too strict for gradual adoption
disallow_incomplete_defs = true
disallow_untyped_decorators = false  # Too strict for click decorators
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Gradual strictness (start permissive, increase over time)
strict_optional = true
strict_equality = true
disallow_any_generics = false  # Enable later for specific modules
disallow_subclassing_any = false
disallow_any_unimported = false

# Error handling
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module overrides for gradual adoption
# Models - already well-typed, can be strict
[[tool.mypy.overrides]]
module = "kp_analysis_toolkit.models.*"
strict = true
disallow_untyped_defs = true
disallow_any_generics = true

# Utils - high priority for strict typing
[[tool.mypy.overrides]]
module = "kp_analysis_toolkit.utils.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# CLI - gradually increase strictness
[[tool.mypy.overrides]]
module = "kp_analysis_toolkit.cli.*"
disallow_incomplete_defs = true
check_untyped_defs = true

# Tests - be more lenient with testing code
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
